IFS-4655 - added tests for the file uploader